src/components/showcasingCard/style.css
.showcasing-card {
  display: flex;
  flex-direction: column;
  gap: 48px;
  padding-top: 4rem;
  text-align: center;
}

.showcasing-card__aspect-ratio {
  position: relative;
  overflow: hidden;
  aspect-ratio: 16 / 9;
}

.showcasing-card__name {
  font-family: var(--font-headings);
  font-size: 48px;
  font-weight: 500;
  line-height: 54px;
  color: var(--color-white);
}

.showcasing-card__image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: auto;
  border-top-left-radius: 17px;
  border-top-right-radius: 17px;
}

@media screen and (max-width: 1268px) {
  .showcasing-card {
    padding-top: 2rem;
  }

  .showcasing-card__aspect-ratio {
    height: clamp(600px, 70vw, 800px);
  }
}

@media screen and (max-width: 968px) {
  .showcasing-card__aspect-ratio {
    height: clamp(400px, 60vw, 600px);
  }

  .showcasing-card__name {
    font-size: 28px;
    line-height: 34px;
  }

  .showcasing-card__image {
    position: initial;
    width: 100%;
  }
}

@media screen and (max-width: 768px) {
  .showcasing-card {
    padding-top: 1rem;
  }

  .showcasing-card__aspect-ratio {
    min-height: clamp(300px, 50vw, 450px);
  }
}

@media screen and (max-width: 568px) {
  .showcasing-card__aspect-ratio {
    min-height: clamp(250px, 45vw, 350px);
  }

  .showcasing-card__name {
    margin-bottom: 1rem;
    font-size: 20px;
    line-height: 28px;
  }
}

@media screen and (max-width: 375px) {
  .showcasing-card {
    gap: 24px;
  }

  .showcasing-card__aspect-ratio {
    min-height: 280px;
  }

  .showcasing-card__image {
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    border-radius: var(--border-radius-s);
  }
}

